--- a/public/index.html
+++ b/public/index.html
@@ -276,7 +276,7 @@
         </div>
 
         <p class="footer-text">
-            Ao usar essa API confirmo estar sujeito aos <a href="#" onclick="return false;">termos de uso</a>.
+            Ao usar essa API confirmo estar sujeito aos <a href="termo.html" onclick="return false;">termos de uso</a>.
             <br> <br> <br> <br> <br> <br> 
             Servidor: APX-EUA | 
             <a href="#" class="status-link" onclick="showStatusModal(); return false;">Versão: 1.2.9</a>
